--- a/HrPortalV2.Web/Areas/Admin/Views/Resumes/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Resumes/Create.cshtml
@@ -1,13 +1,9 @@
 ﻿@model HrPortalV2.Models.Resume
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Yeni Özgeçmiş";
 }
 
-<h2>Create</h2>
-
-<h4>Resume</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
