--- a/HrPortalV2.Web/Areas/Admin/Views/Sectors/Details.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Sectors/Details.cshtml
@@ -1,14 +1,8 @@
 ﻿@model HrPortalV2.Models.Sector
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detaylar";
 }
-
-<h2>Details</h2>
-
-<div>
-    <h4>Sector</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
@@ -49,6 +43,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Düzenle</a> 
+    <a asp-action="Index">İptal</a>
 </div>
