--- a/HrPortalV2.Web/Areas/Admin/Views/JobApplications/Delete.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/JobApplications/Delete.cshtml
@@ -1,15 +1,8 @@
 ﻿@model HrPortalV2.Models.JobApplication
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Sil";
 }
-
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>JobApplication</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Resume)
@@ -69,7 +62,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Sil" class="btn btn-default" /> 
+        <a asp-action="Index">İptal</a>
     </form>
 </div>
