--- a/HrPortalV2.Web/Areas/Admin/Views/JobApplications/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/JobApplications/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<HrPortalV2.Models.JobApplication>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Yeni İş başvuruları";
 }
 
 <h2>Index</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+	<a asp-action="Create">İş başvuruları</a>
 </p>
 <table class="table">
     <thead>
@@ -73,9 +73,9 @@
                 @Html.DisplayFor(modelItem => item.IPAddress)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id"class="btn btn-sm btn-primary">Düzenle</a> 
+                <a asp-action="Details" asp-route-id="@item.Id"class="btn btn-sm btn-default">Detaylar</a> 
+                <a asp-action="Delete" asp-route-id="@item.Id"class="btn btn-sm btn-danger">Sil</a>
             </td>
         </tr>
 }
