--- a/HrPortalV2.Web/Areas/Admin/Views/Jobs/Delete.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Jobs/Delete.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Sil";
 }
-
+<div>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Title)
@@ -93,7 +93,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> 
+        <input type="submit" value="Sil" class="btn btn-default" /> 
         <a asp-action="Index">İptal</a>
     </form>
 </div>
