--- a/HrPortalV2.Web/Areas/Admin/Views/Occupations/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Occupations/Create.cshtml
@@ -1,13 +1,8 @@
 ﻿@model HrPortalV2.Models.Occupation
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Meslekler";
 }
-
-<h2>Create</h2>
-
-<h4>Occupation</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -42,15 +37,12 @@
                 <input asp-for="IPAddress" class="form-control" />
                 <span asp-validation-for="IPAddress" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+			<div class="form-group">
+				<input type="submit" value="Meslekler" class="btn btn-default" />
+				<a asp-action="Index">İptal</a>
+			</div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
