--- a/HrPortalV2.Web/Areas/Admin/Views/Occupations/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Occupations/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<HrPortalV2.Models.Occupation>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Meslekler";
 }
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Yeni Meslekeler</a>
 </p>
 <table class="table" id="tblRecords">
     <thead>
@@ -52,9 +52,9 @@
                 @Html.DisplayFor(modelItem => item.IPAddress)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id"class="btn btn-sm btn-primary">Düzenle</a> 
+                <a asp-action="Details" asp-route-id="@item.Id"class="btn btn-sm btn-default">Detaylar</a> 
+                <a asp-action="Delete" asp-route-id="@item.Id"class="btn btn-sm btn-danger">Sil</a>
             </td>
         </tr>
 }
