--- a/HrPortalV2.Web/Areas/Admin/Views/Resumes/Details.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Resumes/Details.cshtml
@@ -1,14 +1,9 @@
 ﻿@model HrPortalV2.Models.Resume
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detaylar";
 }
 
-<h2>Details</h2>
-
-<div>
-    <h4>Resume</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.ResumeName)
@@ -301,6 +296,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id"class="btn btn-sm btn-primary">Düzenle</a> 
+    <a asp-action="Index">İptal</a>
 </div>
