--- a/HrPortalV2.Web/Areas/Admin/Views/Resumes/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Resumes/Index.cshtml
@@ -7,7 +7,7 @@
 
 
 <p>
-    <a asp-action="Create">Create New</a>
+	<a asp-action="Create">Yeni Özgeçmiş </a>
 </p>
 <table id="tblRecords" class="table">
     <thead>
@@ -307,9 +307,9 @@
                 @Html.DisplayFor(modelItem => item.IPAddress)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id"class="btn btn-sm btn-primary">Düzenle</a> 
+                <a asp-action="Details" asp-route-id="@item.Id"class="btn btn-sm btn-default">Detaylar</a> 
+                <a asp-action="Delete" asp-route-id="@item.Id"class="btn btn-sm btn-danger">Sil</a>
             </td>
         </tr>
 }
