--- a/HrPortalV2.Web/Areas/Admin/Views/Sectors/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Sectors/Create.cshtml
@@ -1,13 +1,9 @@
 ﻿@model HrPortalV2.Models.Sector
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Yeni Sektor";
 }
 
-<h2>Create</h2>
-
-<h4>Sector</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -42,16 +38,14 @@
                 <input asp-for="IPAddress" class="form-control" />
                 <span asp-validation-for="IPAddress" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+			<div class="form-group">
+				<input type="submit" value="Create" class="btn btn-default" />
+				<a asp-action="Index">İptal</a>
+			</div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
