--- a/HrPortalV2.Web/Areas/Admin/Views/Resumes/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Resumes/Index.cshtml
@@ -141,22 +141,22 @@
             <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Twitter)
             </th>
-            <th class="text-nowrap">
+            <th class="text-nowrap never">
                 @Html.DisplayNameFor(model => model.CreateDate)
             </th>
-            <th class="text-nowrap">
+            <th class="text-nowrap never">
                 @Html.DisplayNameFor(model => model.CreatedBy)
             </th>
-            <th class="text-nowrap">
+            <th class="text-nowrap never">
                 @Html.DisplayNameFor(model => model.UpdateDate)
             </th>
-            <th class="text-nowrap">
+            <th class="text-nowrap never">
                 @Html.DisplayNameFor(model => model.UpdatedBy)
             </th>
-            <th class="text-nowrap">
+            <th class="text-nowrap never">
                 @Html.DisplayNameFor(model => model.IPAddress)
             </th>
-            <th></th>
+            <th class="text-nowrap">Eylemler</th>
         </tr>
     </thead>
     <tbody>
@@ -307,9 +307,9 @@
                 @Html.DisplayFor(modelItem => item.IPAddress)
             </td>
             <td class="text-nowrap">
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Edit</a>
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-default">Details</a>
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Delete</a>
             </td>
         </tr>
 }
