--- a/HrPortalV2.Web/Areas/Admin/Views/Countries/Delete.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Countries/Delete.cshtml
@@ -4,12 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Sil</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bu ülkeyi silmek istediğinize emin misiniz?</h3>
 <div>
-    <h4>Country</h4>
-    <hr />
+
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
@@ -51,7 +50,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Sil" class="btn btn-default" /> |
+        <a asp-action="Index">İptal</a>
     </form>
 </div>
