--- a/HrPortalV2.Web/Areas/Admin/Views/Sectors/Edit.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Sectors/Edit.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Düzenle</h2>
 
-<h4>Sector</h4>
-<hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
@@ -44,14 +43,14 @@
                 <span asp-validation-for="IPAddress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Kaydet" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">İptal</a>
 </div>
 
 @section Scripts {
