--- a/HrPortalV2.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -213,7 +213,7 @@ License: You must have a valid license purchased only from themeforest(the above
                         
                     </li>
                     <li class="nav-item  ">
-                        <a asp-item="Index" asp-controller="JobApplications" class="nav-link nav-toggle">
+                        <a asp-action="Index" asp-controller="JobApplications" class="nav-link nav-toggle">
                             <i class="icon-briefcase"></i>
                             <span class="title">Başvurular</span>
                             <span class="arrow"></span>
