--- a/HrPortalV2.Web/Areas/Admin/Views/Jobs/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Jobs/Create.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Oluştur";
 }
 
-<h2>Create</h2>
+<h2>İş İlanı Ekle</h2>
 
-<h4>Job</h4>
-<hr />
+<h4></h4>
+
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12 ">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
