--- a/HrPortalV2.Web/Areas/Admin/Views/Jobs/Details.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Jobs/Details.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Detaylar";
 }
-
+<div>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Title)
