--- a/HrPortalV2.Web/Areas/Admin/Views/Jobs/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Jobs/Index.cshtml
@@ -7,7 +7,7 @@
 
 
 <p>
-    <a asp-action="Create">Yeni Meslek</a>
+    <a asp-action="Create">Yeni İş İlanı Ekle</a>
 </p>
 <table  id="tblRecords" class="table">
     <thead>
