--- a/HrPortalV2.Web/Views/Resumes/Details.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Details.cshtml
@@ -102,15 +102,7 @@
                                             </div>
                                             <div class="col-md-4">
                                                 <p>
-                                                    <strong>Son Çalıştığı Firma</strong><br />
-                                                    @Html.DisplayFor(model => model.LastCompany)
-                                                </p>
-                                                <p>
-                                                    <strong>Son Çalıştığı Pozisyon</strong><br />
-                                                    @Html.DisplayFor(model => model.LastPosition)
-                                                </p>
-                                                <p>
-                                                    <strong>Şu Anda Çalışıyor Mu?</strong>
+                                                    <strong>Şu Anda Çalışıyor Mu?</strong> <br />
                                                     @Html.DisplayFor(model => model.IsCurrentlyWorking)
                                                 </p>
                                             </div>
