--- a/HrPortalV2.Web/Areas/Admin/Views/Companies/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Companies/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <p>
-    <a asp-action="Create">Yeni Firma</a>
+    <a asp-action="Create"class="btn btn-sm  btn-primary">Yeni Firma</a>
 </p>
 <table class="table" id="tblRecords">
     <thead>
