--- a/HrPortalV2.Web/Areas/Admin/Views/Countries/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Countries/Index.cshtml
@@ -7,7 +7,7 @@
 
 
 <p>
-    <a asp-action="Create">Yeni Ülke</a>
+    <a asp-action="Create"class=" btn btn-sm btn-primary">Yeni Ülke</a>
 </p>
 <table class="table">
     <thead>
@@ -55,9 +55,9 @@
                 @Html.DisplayFor(modelItem => item.IPAddress)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Düzenle</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Detaylar</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Sil</a>
+                <a asp-action="Edit" asp-route-id="@item.Id"class="btn btn-sm btn-primary">Düzenle</a> 
+                <a asp-action="Details" asp-route-id="@item.Id"class="btn btn-sm btn-default">Detaylar</a> 
+                <a asp-action="Delete" asp-route-id="@item.Id"class="btn btn-sm btn-danger">Sil</a>
             </td>
         </tr>
 }
