--- a/HrPortalV2.Web/Areas/Admin/Views/JobApplications/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/JobApplications/Index.cshtml
@@ -3,11 +3,8 @@
 @{
     ViewData["Title"] = "Yeni İş başvuruları";
 }
-
-<h2>Index</h2>
-
 <p>
-	<a asp-action="Create">İş başvuruları</a>
+	<a asp-action="Create"class="btn btn-sm btn-primary">İş başvuruları</a>
 </p>
 <table class="table" id="tblRecords">
     <thead>
