--- a/HrPortalV2.Web/Areas/Admin/Views/Occupations/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Occupations/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Yeni Meslek";
 }
 <p>
-    <a asp-action="Create">Yeni Meslek</a>
+    <a asp-action="Create" class="btn btn-sm btn-primary">Yeni Meslek</a>
 </p>
 <table class="table" id="tblRecords">
     <thead>
