--- a/HrPortalV2.Web/Areas/Admin/Views/Resumes/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Resumes/Index.cshtml
@@ -7,7 +7,7 @@
 
 
 <p>
-	<a asp-action="Create">Yeni Özgeçmiş </a>
+	<a asp-action="Create" class="btn btn-sm btn-primary">Yeni Özgeçmiş </a>
 </p>
 <table id="tblRecords" class="table">
     <thead>
