--- a/HrPortalV2.Web/Areas/Admin/Views/Companies/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Companies/Create.cshtml
@@ -4,9 +4,6 @@
     ViewData["Title"] = "Yeni Firma";
 }
 
-<h2>Yeni Firma</h2>
-
-
 <div class="row">
     <div class="col-md-8">
         <form asp-action="Create">
@@ -43,14 +40,14 @@
                 <select asp-for="SectorId" class ="form-control" asp-items="ViewBag.SectorId"></select>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div>
                     <label>
                         <input asp-for="IsApproved" /> @Html.DisplayNameFor(model => model.IsApproved)
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div>
                     <label>
                         <input asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
                     </label>
@@ -106,17 +103,13 @@
                 <input asp-for="IPAddress" class="form-control" />
                 <span asp-validation-for="IPAddress" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+			<div class="form-group">
+				<input type="submit" value="Kaydet" class="btn btn-primary" />
+				<a asp-action="Index"class="btn btn-sm btn-danger">İptal</a>
+			</div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
