--- a/HrPortalV2.Web/Areas/Admin/Views/Companies/Delete.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Companies/Delete.cshtml
@@ -1,15 +1,12 @@
 ﻿@model HrPortalV2.Models.Company
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Sil";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Silmek İstediğne Eminmisiniz?</h3>
 <div>
-    <h4>Company</h4>
-    <hr />
+ 
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
