--- a/HrPortalV2.Web/Areas/Admin/Views/Companies/Details.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Companies/Details.cshtml
@@ -1,14 +1,11 @@
 ﻿@model HrPortalV2.Models.Company
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detaylar";
 }
 
-<h2>Details</h2>
-
 <div>
-    <h4>Company</h4>
-    <hr />
+  
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
@@ -127,6 +124,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id"class=" btn btn-sm btn-primary">Düzenle</a> 
+    <a asp-action="Index"class="btn btn-sm btn-danger">İptal</a>
 </div>
