--- a/HrPortalV2.Web/Areas/Admin/Views/Companies/Edit.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Companies/Edit.cshtml
@@ -1,128 +1,123 @@
 ﻿@model HrPortalV2.Models.Company
 
 @{
-    ViewData["Title"] = "Düzenle";
+	ViewData["Title"] = "Düzenle";
 }
 
 
 
-<h4>Firmalar</h4>
-<hr />
+
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CountryId" class="control-label"></label>
-                <select asp-for="CountryId" class="form-control" asp-items="ViewBag.CountryId"></select>
-                <span asp-validation-for="CountryId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CityId" class="control-label"></label>
-                <select asp-for="CityId" class="form-control" asp-items="ViewBag.CityId"></select>
-                <span asp-validation-for="CityId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CountyId" class="control-label"></label>
-                <select asp-for="CountyId" class="form-control" asp-items="ViewBag.CountyId"></select>
-                <span asp-validation-for="CountyId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
-                <span asp-validation-for="Address" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SectorId" class="control-label"></label>
-                <select asp-for="SectorId" class="form-control" asp-items="ViewBag.SectorId"></select>
-                <span asp-validation-for="SectorId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <div class="checkbox">
-                    <label>
-                        <input asp-for="IsApproved" /> @Html.DisplayNameFor(model => model.IsApproved)
-                    </label>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="checkbox">
-                    <label>
-                        <input asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
-                    </label>
-                </div>
-            </div>
-            <div class="form-group">
-                <label asp-for="Phone" class="control-label"></label>
-                <input asp-for="Phone" class="form-control" />
-                <span asp-validation-for="Phone" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ContactName" class="control-label"></label>
-                <input asp-for="ContactName" class="form-control" />
-                <span asp-validation-for="ContactName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Logo" class="control-label"></label>
-                <input asp-for="Logo" class="form-control" />
-                <span asp-validation-for="Logo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Website" class="control-label"></label>
-                <input asp-for="Website" class="form-control" />
-                <span asp-validation-for="Website" class="text-danger"></span>
-            </div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="CreateDate" class="control-label"></label>
-                <input asp-for="CreateDate" class="form-control" />
-                <span asp-validation-for="CreateDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreatedBy" class="control-label"></label>
-                <input asp-for="CreatedBy" class="form-control" />
-                <span asp-validation-for="CreatedBy" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UpdateDate" class="control-label"></label>
-                <input asp-for="UpdateDate" class="form-control" />
-                <span asp-validation-for="UpdateDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UpdatedBy" class="control-label"></label>
-                <input asp-for="UpdatedBy" class="form-control" />
-                <span asp-validation-for="UpdatedBy" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IPAddress" class="control-label"></label>
-                <input asp-for="IPAddress" class="form-control" />
-                <span asp-validation-for="IPAddress" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Kaydet" class="btn btn-default" />
-            </div>
-        </form>
-    </div>
+	<div class="col-md-4">
+		<form asp-action="Edit">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<div class="form-group">
+				<label asp-for="Name" class="control-label"></label>
+				<input asp-for="Name" class="form-control" />
+				<span asp-validation-for="Name" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Description" class="control-label"></label>
+				<input asp-for="Description" class="form-control" />
+				<span asp-validation-for="Description" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="CountryId" class="control-label"></label>
+				<select asp-for="CountryId" class="form-control" asp-items="ViewBag.CountryId"></select>
+				<span asp-validation-for="CountryId" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="CityId" class="control-label"></label>
+				<select asp-for="CityId" class="form-control" asp-items="ViewBag.CityId"></select>
+				<span asp-validation-for="CityId" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="CountyId" class="control-label"></label>
+				<select asp-for="CountyId" class="form-control" asp-items="ViewBag.CountyId"></select>
+				<span asp-validation-for="CountyId" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Address" class="control-label"></label>
+				<input asp-for="Address" class="form-control" />
+				<span asp-validation-for="Address" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="SectorId" class="control-label"></label>
+				<select asp-for="SectorId" class="form-control" asp-items="ViewBag.SectorId"></select>
+				<span asp-validation-for="SectorId" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<div>
+					<label>
+						<input asp-for="IsApproved" /> @Html.DisplayNameFor(model => model.IsApproved)
+					</label>
+				</div>
+			</div>
+			<div class="form-group">
+				<div>
+					<label>
+						<input asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
+					</label>
+				</div>
+			</div>
+			<div class="form-group">
+				<label asp-for="Phone" class="control-label"></label>
+				<input asp-for="Phone" class="form-control" />
+				<span asp-validation-for="Phone" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Email" class="control-label"></label>
+				<input asp-for="Email" class="form-control" />
+				<span asp-validation-for="Email" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="ContactName" class="control-label"></label>
+				<input asp-for="ContactName" class="form-control" />
+				<span asp-validation-for="ContactName" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Logo" class="control-label"></label>
+				<input asp-for="Logo" class="form-control" />
+				<span asp-validation-for="Logo" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Website" class="control-label"></label>
+				<input asp-for="Website" class="form-control" />
+				<span asp-validation-for="Website" class="text-danger"></span>
+			</div>
+			<input type="hidden" asp-for="Id" />
+			<div class="form-group">
+				<label asp-for="CreateDate" class="control-label"></label>
+				<input asp-for="CreateDate" class="form-control" />
+				<span asp-validation-for="CreateDate" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="CreatedBy" class="control-label"></label>
+				<input asp-for="CreatedBy" class="form-control" />
+				<span asp-validation-for="CreatedBy" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="UpdateDate" class="control-label"></label>
+				<input asp-for="UpdateDate" class="form-control" />
+				<span asp-validation-for="UpdateDate" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="UpdatedBy" class="control-label"></label>
+				<input asp-for="UpdatedBy" class="form-control" />
+				<span asp-validation-for="UpdatedBy" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="IPAddress" class="control-label"></label>
+				<input asp-for="IPAddress" class="form-control" />
+				<span asp-validation-for="IPAddress" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<input type="submit" value="Kaydet" class="btn btn-default" />
+				<a asp-action="Index"class="btn btn-sm btn-danger">İptal</a>
+			</div>
+		</form>
+	</div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+	@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
