--- a/HrPortalV2.Web/Areas/Admin/Views/Countries/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Countries/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model HrPortalV2.Models.Country
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Yeni Ülke";
 }
 
-<h2>Yeni Ülke</h2>
+
 
 
 <div class="row">
@@ -41,15 +41,12 @@
                 <input asp-for="IPAddress" class="form-control" />
                 <span asp-validation-for="IPAddress" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Kaydet" class="btn btn-default" />
-            </div>
+			<div class="form-group">
+				<input type="submit" value="Kaydet" class="btn btn-primary" />
+				<a asp-action="Index"class="btn btn-sm btn-danger">İptal</a>
+			</div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">İptal</a>
 </div>
 
 @section Scripts {
