--- a/HrPortalV2.Web/Areas/Admin/Views/Countries/Delete.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Countries/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model HrPortalV2.Models.Country
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Sil";
 }
 
-<h2>Sil</h2>
 
-<h3>Bu ülkeyi silmek istediğinize emin misiniz?</h3>
+
+<h3>Bu ülkeyi silmek istediğinize Emin misiniz?</h3>
 <div>
 
     <dl class="dl-horizontal">
@@ -50,7 +50,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Sil" class="btn btn-default" /> |
-        <a asp-action="Index">İptal</a>
+        <input type="submit" value="Sil" class="btn btn-default" /> 
+        <a asp-action="Index"class="btn btn-sm btn-danger">İptal</a>
     </form>
 </div>
