--- a/HrPortalV2.Web/Areas/Admin/Views/Countries/Details.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Countries/Details.cshtml
@@ -1,10 +1,8 @@
 ﻿@model HrPortalV2.Models.Country
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detaylar";
 }
-
-<h2>Detaylar</h2>
 
 <div>
 
@@ -48,6 +46,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Düzenle</a> |
-    <a asp-action="Index">İptal</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id"class="btn btn-sm btn-primary">Düzenle</a> 
+    <a asp-action="Index"class="btn btn-smm btn-danger">İptal</a>
 </div>
