--- a/HrPortalV2.Web/Areas/Admin/Views/Countries/Edit.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Countries/Edit.cshtml
@@ -1,58 +1,55 @@
 ﻿@model HrPortalV2.Models.Country
 
 @{
-    ViewData["Title"] = "Edit";
+	ViewData["Title"] = "Düzenle";
 }
 
-<h2>Düzenle</h2>
+
 
 
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="CreateDate" class="control-label"></label>
-                <input asp-for="CreateDate" class="form-control" />
-                <span asp-validation-for="CreateDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreatedBy" class="control-label"></label>
-                <input asp-for="CreatedBy" class="form-control" />
-                <span asp-validation-for="CreatedBy" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UpdateDate" class="control-label"></label>
-                <input asp-for="UpdateDate" class="form-control" />
-                <span asp-validation-for="UpdateDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UpdatedBy" class="control-label"></label>
-                <input asp-for="UpdatedBy" class="form-control" />
-                <span asp-validation-for="UpdatedBy" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IPAddress" class="control-label"></label>
-                <input asp-for="IPAddress" class="form-control" />
-                <span asp-validation-for="IPAddress" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Kaydet" class="btn btn-default" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-action="Index">İptal</a>
+	<div class="col-md-4">
+		<form asp-action="Edit">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<div class="form-group">
+				<label asp-for="Name" class="control-label"></label>
+				<input asp-for="Name" class="form-control" />
+				<span asp-validation-for="Name" class="text-danger"></span>
+			</div>
+			<input type="hidden" asp-for="Id" />
+			<div class="form-group">
+				<label asp-for="CreateDate" class="control-label"></label>
+				<input asp-for="CreateDate" class="form-control" />
+				<span asp-validation-for="CreateDate" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="CreatedBy" class="control-label"></label>
+				<input asp-for="CreatedBy" class="form-control" />
+				<span asp-validation-for="CreatedBy" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="UpdateDate" class="control-label"></label>
+				<input asp-for="UpdateDate" class="form-control" />
+				<span asp-validation-for="UpdateDate" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="UpdatedBy" class="control-label"></label>
+				<input asp-for="UpdatedBy" class="form-control" />
+				<span asp-validation-for="UpdatedBy" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="IPAddress" class="control-label"></label>
+				<input asp-for="IPAddress" class="form-control" />
+				<span asp-validation-for="IPAddress" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<input type="submit" value="Kaydet" class="btn btn-default" />
+				<a asp-action="Index"class="btn btn-sm btn-danger">İptal</a>
+			</div>
+		</form>
+	</div>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+	@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
