--- a/HrPortalV2.Web/Areas/Admin/Views/JobApplications/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/JobApplications/Create.cshtml
@@ -51,7 +51,7 @@
                 <span asp-validation-for="IPAddress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-sm btn-primary" />
+                <input type="submit" value="Kaydet" class="btn btn-sm btn-primary" />
                 <a asp-action="Index" class="btn btn-sm btn-danger">İptal</a>
             </div>
         </form>
