--- a/HrPortalV2.Web/Areas/Admin/Views/Jobs/Edit.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Jobs/Edit.cshtml
@@ -36,21 +36,21 @@
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div>
                     <label>
                         <input asp-for="IsApproved" /> @Html.DisplayNameFor(model => model.IsApproved)
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div>
                     <label>
                         <input asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div>
                     <label>
                         <input asp-for="IsFeatured" /> @Html.DisplayNameFor(model => model.IsFeatured)
                     </label>
