--- a/HrPortalV2.Web/Areas/Admin/Views/Messages/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Messages/Create.cshtml
@@ -3,8 +3,7 @@
 @{
     ViewData["Title"] = "Mesaj Ekle";
 }
-<h3>Mesaj Ekle</h3>
-<hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -40,14 +39,14 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div>
                     <label>
                         <input asp-for="IsRead" /> @Html.DisplayNameFor(model => model.IsRead)
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div>
                     <label>
                         <input asp-for="IsApproved" /> @Html.DisplayNameFor(model => model.IsApproved)
                     </label>
