--- a/HrPortalV2.Web/Areas/Admin/Views/Messages/Edit.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Messages/Edit.cshtml
@@ -40,14 +40,14 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div>
                     <label>
                         <input asp-for="IsRead" /> @Html.DisplayNameFor(model => model.IsRead)
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div>
                     <label>
                         <input asp-for="IsApproved" /> @Html.DisplayNameFor(model => model.IsApproved)
                     </label>
