--- a/HrPortalV2.Web/Areas/Admin/Views/Messages/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Messages/Index.cshtml
@@ -7,7 +7,7 @@
 
 
 <p>
-    <a asp-action="Create">Yeni Mesaj</a>
+    <a asp-action="Create"class="btn btn-sm btn-primary">Yeni Mesaj</a>
 </p>
 <table class="table" id="tblRecords">
     <thead>
@@ -85,9 +85,9 @@
                 @Html.DisplayFor(modelItem => item.IPAddress)
             </td>
             <td class="text-nowrap">
-                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Düzenle</a> 
-                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-success">Detaylar</a> 
-                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Sil</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Düzenle</a> 
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-default">Detaylar</a> 
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Sil</a>
             </td>
         </tr>
 }
