--- a/HrPortalV2.Web/Areas/Admin/Views/Occupations/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Occupations/Create.cshtml
@@ -42,8 +42,8 @@
                 <span asp-validation-for="IPAddress" class="text-danger"></span>
             </div>
 			<div class="form-group">
-				<input type="submit" value="Kaydet" class="btn btn-default" />
-				<a asp-action="Index">İptal</a>
+				<input type="submit" value="Kaydet" class="btn btn-primary" />
+				<a asp-action="Index"class="btn btn-sm btn-danger">İptal</a>
 			</div>
         </form>
     </div>
