--- a/HrPortalV2.Web/Areas/Admin/Views/Occupations/Delete.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Occupations/Delete.cshtml
@@ -47,7 +47,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Sil" class="btn btn-default" /> |
+        <input type="submit" value="Sil" class="btn btn-default" /> 
         <a asp-action="Index">İptal</a>
     </form>
 </div>
