--- a/HrPortalV2.Web/Areas/Admin/Views/Sectors/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Sectors/Create.cshtml
@@ -4,9 +4,6 @@
     ViewData["Title"] = "Yeni Sektör";
 }
 
-<h2>Yeni Sektör</h2>
-
-
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -42,8 +39,8 @@
                 <span asp-validation-for="IPAddress" class="text-danger"></span>
             </div>
 			<div class="form-group">
-				<input type="submit" value="Kaydet" class="btn btn-default" />
-				<a asp-action="Index">İptal</a>
+				<input type="submit" value="Kaydet" class="btn btn-primary" />
+				<a asp-action="Index"class="btn btn-sm btn-danger">İptal</a>
 			</div>
         </form>
     </div>
