--- a/HrPortalV2.Web/Areas/Admin/Views/Sectors/Delete.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Sectors/Delete.cshtml
@@ -4,7 +4,6 @@
     ViewData["Title"] = "Sil";
 }
 
-<h2>Sil</h2>
 
 <h3>Bu sektörü silmek istediğinize emin misiniz?</h3>
 <div>
@@ -50,7 +49,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Sil" class="btn btn-default" /> 
-        <a asp-action="Index">İptal</a>
+        <input type="submit" value="Sil" class="btn btn-primary" /> 
+        <a asp-action="Index"class="btn btn-sm btn-danger">İptal</a>
     </form>
 </div>
