--- a/HrPortalV2.Web/Areas/Admin/Views/Sectors/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Sectors/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <p>
-    <a asp-action="Create">Yeni Sektör</a>
+    <a asp-action="Create"class="btn btn-sm btn-primary">Yeni Sektör</a>
 </p>
 <table class="table">
     <thead>
