--- a/HrPortalV2.Web/Areas/Admin/Views/Companies/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Companies/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Firmalar";
 }
+<h2>Firmalar</h2>
 
 <p>
     <a asp-action="Create"class="btn btn-sm  btn-primary">Yeni Firma</a>
