--- a/HrPortalV2.Web/Areas/Admin/Views/Jobs/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Jobs/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Meslekler";
 }
 
-
+<h2>İş İlanları</h2>
 
 <p>
     <a asp-action="Create"class="btn btn-sm btn-primary">Yeni Meslek</a>
