--- a/HrPortalV2.Web/Areas/Admin/Views/Messages/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Messages/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-
+<h2>Mesajlar</h2>
 
 <p>
     <a asp-action="Create"class="btn btn-sm btn-primary">Yeni Mesaj</a>
