--- a/HrPortalV2.Web/Areas/Admin/Views/Occupations/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Occupations/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Yeni Meslek";
 }
+<h2>Meslekler</h2>
 <p>
     <a asp-action="Create" class="btn btn-sm btn-primary">Yeni Meslek</a>
 </p>
