--- a/HrPortalV2.Web/Areas/Admin/Views/Sectors/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Sectors/Index.cshtml
@@ -4,10 +4,12 @@
     ViewData["Title"] = "Sektörler";
 }
 
+<h2>SektörLer</h2>
+
 <p>
     <a asp-action="Create"class="btn btn-sm btn-primary">Yeni Sektör</a>
 </p>
-<table class="table">
+<table class="table" id="tblRecords">
     <thead>
         <tr>
             <th class="text-nowrap all">
