--- a/HrPortalV2.Web/Areas/Admin/Views/Countries/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Countries/Index.cshtml
@@ -3,13 +3,14 @@
 @{
     ViewData["Title"] = "Index";
 }
+<h2>Firmalar</h2>
 
 
 
 <p>
     <a asp-action="Create"class=" btn btn-sm btn-primary">Yeni Ülke</a>
 </p>
-<table class="table">
+<table class="table" id="tblRecords">
     <thead>
         <tr>
             <th>
