--- a/HrPortalV2.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -101,7 +101,7 @@ License: You must have a valid license purchased only from themeforest(the above
                             </a>
                             <ul class="dropdown-menu dropdown-menu-default">
                                 <li>
-                                    <a href="page_user_profile_1.html" >
+                                    <a href="/Identity/Account/Manage">
                                         <i class="icon-user" ></i> My Profile
                                     </a>
                                 </li>
@@ -109,7 +109,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <li class="divider"> </li>
                              
                                 <li>
-                                    <a href="page_user_login_1.html">
+                                    <a href="http://localhost:55437/">
                                         <i class="icon-key"></i> Log Out
                                     </a>
                                 </li>
