--- a/HrPortalV2.Web/Views/Resumes/Details.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Details.cshtml
@@ -14,7 +14,7 @@
                         <div class="col-md-3">
                             <ul class="list-unstyled profile-nav">
                                 <li>
-                                    <img src="~/Uploads/@Model.Photo" class="img-responsive pic-bordered" alt="" />
+                                    <img src="~/Uploads/Resumes/@Model.Photo" class="img-responsive pic-bordered" alt="" />
                                 </li>
                             </ul>
                         </div>
