--- a/HrPortalV2.Web/Views/Resumes/MyResumes.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/MyResumes.cshtml
@@ -58,7 +58,7 @@
         {
         <tr>
             <td class="all">
-                <img style="width:50px;" src="~/Uploads/@item.Photo" />
+                <img style="width:50px;" src="~/Uploads/Resumes/@item.Photo" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
