--- a/HrPortalV2.Web/Views/Resumes/Edit.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Edit.cshtml
@@ -45,11 +45,11 @@
                     <input asp-for="Photo" type="hidden" />
                     @if (!string.IsNullOrEmpty(Model.Photo))
                     {
-                        <img src="~/Uploads/@Model.Photo" width="50" /> <br />
+                        <img src="~/Uploads/Resumes/@Model.Photo" width="50" /> <br />
                     }
                     <label asp-for="Photo" class="control-label"></label>
 
-                    <input name="File" type="file" class="form-control" />
+                    <input name="upload" type="file" class="form-control" />
                     <span asp-validation-for="Photo" class="text-danger"></span>
                 </div>
                 <div class="form-group">
@@ -402,7 +402,8 @@
         <input asp-for="IPAddress" type="hidden" />
     </div>
     <div class="form-group">
-        <input type="submit" value="Kaydet" class="btn btn-success btn-sm" /> <a asp-action="MyResumes" class="btn btn-danger btn-sm">İptal</a>
+        <input type="submit" value="Kaydet" class="btn btn-success btn-sm" /> 
+        <a asp-action="MyResumes" class="btn btn-danger btn-sm">İptal</a>
     </div>
 
 </form>
