--- a/HrPortalV2.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -102,7 +102,7 @@ License: You must have a valid license purchased only from themeforest(the above
                             <ul class="dropdown-menu dropdown-menu-default">
                                 <li>
                                     <a href="/Identity/Account/Manage">
-                                        <i class="icon-user" ></i> My Profile
+                                        <i class="icon-user" ></i> Profilim
                                     </a>
                                 </li>
                                
@@ -110,7 +110,7 @@ License: You must have a valid license purchased only from themeforest(the above
                              
                                 <li>
                                     <a href="http://localhost:55437/">
-                                        <i class="icon-key"></i> Log Out
+                                        <i class="icon-key"></i> Çıkış
                                     </a>
                                 </li>
                             </ul>
