--- a/HrPortalV2.Web/Areas/Admin/Views/Cities/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Cities/Index.cshtml
@@ -6,7 +6,7 @@
 
 
 <p>
-    <a asp-action="Create">Yeni Şehir</a>
+    <a asp-action="Create" class="btn btn-sm btn-primary">Yeni Şehir</a>
 </p>
 <table class="table">
     <thead>
