--- a/HrPortalV2.Web/Areas/Admin/Views/Companies/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Companies/Create.cshtml
@@ -20,23 +20,24 @@
             </div>
             <div class="form-group">
                 <label asp-for="CountryId" class="control-label"></label>
-                <select asp-for="CountryId" class="form-control" asp-items="ViewBag.CountryId">
+                <select asp-for="CountryId" class="form-control" asp-items="ViewBag.CountryId" onchange="CountryChange(this)">
                     <option value="">Ülke Seçiniz</option>
-                   
                 </select>
+                <span asp-validation-for="CountryId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CityId" class="control-label"></label>
-                <select asp-for="CityId" class="form-control" asp-items="ViewBag.CityId">
+                <select asp-for="CityId" class="form-control" asp-items="ViewBag.CityId" onchange="CityChange(this)">
                     <option value="">Şehir Seçiniz</option>
-                   
                 </select>
+                <span asp-validation-for="CityId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CountyId" class="control-label"></label>
                 <select asp-for="CountyId" class="form-control" asp-items="ViewBag.CountyId">
                     <option value="">İlçe Seçiniz</option>
-            </select>
+                </select>
+                <span asp-validation-for="CountyId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
@@ -47,7 +48,8 @@
                 <label asp-for="SectorId" class="control-label"></label>
                 <select asp-for="SectorId" class="form-control" asp-items="ViewBag.SectorId">
                     <option value="">Sektör Seçiniz</option>
-                 </select>
+                </select>
+                <span asp-validation-for="SectorId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <div>
@@ -124,4 +126,33 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="https://cdn.ckeditor.com/ckeditor5/10.1.0/classic/ckeditor.js"></script>
+    <script>
+        ClassicEditor
+            .create(document.querySelector('#Description'))
+            .catch(error => {
+                console.error(error);
+            });
+        function CountryChange(elm) {
+            $.get('@Url.Action("GetCities","Companies")', { countryId: $(elm).val() }, function (data) {
+                var $select = $("#CityId");
+                $select.empty();
+                $select.append('<option value="">Şehir seçiniz</option>');
+                $.each(data, function (key, value) {
+                    $select.append('<option value="' + value.id + '">' + value.name + '</option>');
+                });
+            });
+        }
+
+        function CityChange(elm) {
+            $.get('@Url.Action("GetCounties","Companies")', { cityId: $(elm).val() }, function (data) {
+                var $select = $("#CountyId");
+                $select.empty();
+                $select.append('<option value="">İlçe seçiniz</option>');
+                $.each(data, function (key, value) {
+                    $select.append('<option value="' + value.id + '">' + value.name + '</option>');
+                });
+            });
+        }
+    </script>
 }
