--- a/HrPortalV2.Web/Views/Companies/Create.cshtml
+++ b/HrPortalV2.Web/Views/Companies/Create.cshtml
@@ -39,17 +39,20 @@
             </div>
             <div class="form-group">
                 <label asp-for="CityId" class="control-label"></label>
-                <select asp-for="CityId" class="form-control" asp-items="ViewBag.CityId" onchange="CityChange(this)">   <option value="">Şehir seçiniz</option></select>
+                <select asp-for="CityId" class="form-control" asp-items="ViewBag.CityId" onchange="CityChange(this)">
+                <option value="">Şehir seçiniz</option></select>
                 <span asp-validation-for="CityId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CountyId" class="control-label"></label>
-                <select asp-for="CountyId" class="form-control" asp-items="ViewBag.CountyId">   <option value="">İlçe seçiniz</option></select>
+                <select asp-for="CountyId" class="form-control" asp-items="ViewBag.CountyId">   
+                <option value="">İlçe seçiniz</option></select>
                 <span asp-validation-for="CountyId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SectorId" class="control-label"></label>
-                <select asp-for="SectorId" class="form-control" asp-items="ViewBag.SectorId"> <option value="">Sektor seçiniz</option></select>
+                <select asp-for="SectorId" class="form-control" asp-items="ViewBag.SectorId">
+                <option value="">Sektor seçiniz</option></select>
                 <span asp-validation-for="SectorId" class="text-danger"></span>
             </div>
             <div class="form-group">
