--- a/HrPortalV2.Web/Areas/Admin/Views/Cities/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Cities/Index.cshtml
@@ -4,11 +4,12 @@
     ViewData["Title"] = "Şehirler";
 }
 
+<h2>Şehirler</h2>
 
 <p>
-    <a asp-action="Create">Yeni Şehir</a>
+    <a asp-action="Create" class="btn btn-sm btn-primary">Yeni Şehir</a>
 </p>
-<table class="table">
+<table id="tblRecords" class="table">
     <thead>
         <tr>
             <th>
