--- a/HrPortalV2.Web/Views/Messages/Details.cshtml
+++ b/HrPortalV2.Web/Views/Messages/Details.cshtml
@@ -5,10 +5,12 @@
 <div class="row">
     <div class="col-md-12">
         <p>
-            <strong>Kimden:</strong><span>@Model.FromName</span>
+            <strong>Kimden:</strong> <br />
+            <span>@Model.FromName</span>
         </p>
         <p>
-            <strong>Konu:</strong><span>@Model.Title</span>
+            <strong>Konu:</strong> <br />
+            <span>@Model.Title</span>
         </p>
         <p>
         <strong>Mesaj İçeriği:</strong><br />
