--- a/HrPortalV2.Web/Views/Messages/MyMessagesSentToMyResumes.cshtml
+++ b/HrPortalV2.Web/Views/Messages/MyMessagesSentToMyResumes.cshtml
@@ -35,7 +35,7 @@
                 </td>
                 <td class="text-nowrap">
                     
-                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary btn-sm">Mesajı Oku</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary btn-sm">Mesajı Oku</a>
                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Sil</a>
                 </td>
             </tr>
