--- a/HrPortalV2.Web/Views/Companies/Index.cshtml
+++ b/HrPortalV2.Web/Views/Companies/Index.cshtml
@@ -12,16 +12,13 @@
             <th class="text-nowrap all">
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-
-
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.City)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.County)
             </th>
-
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Sector)
             </th>
             <th class="text-nowrap all" data-orderable="false">Eylemler</th>
