--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -7,4 +7,5 @@
 <header>
     <h1 class="text-danger">@ViewData["Title"]</h1>
     <p class="text-danger">Bu kaynağa erişiminiz yok.</p>
+    <p><a asp-action="Index" asp-controller="Home" asp-area="" class="btn btn-sm btn-primary">Anasayfaya Dön</a></p>
 </header>
