--- a/HrPortalV2.Web/Views/Shared/_LoginPartial.cshtml
+++ b/HrPortalV2.Web/Views/Shared/_LoginPartial.cshtml
@@ -140,7 +140,7 @@
                         <li>
                             <a asp-area="" asp-controller="JobApplications" asp-action="MyJobApplicants">
                                 <i class="icon-envelope-open"></i> Başvuranlar
-                                <span class="badge badge-danger"> 3 </span>
+                                <span class="badge badge-danger"> @ViewBag.jobApplicationCount </span>
                             </a>
                         </li>
                     }
