--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Profile";
+    ViewData["Title"] = "Profilim";
 }
 
 <h4>@ViewData["Title"]</h4>
@@ -41,7 +41,7 @@
                 <input type="file" name="upload" class="form-control" />
                 <span asp-validation-for="Input.Photo" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Save</button>
+            <button type="submit" class="btn btn-primary">Kaydet</button>
         </form>
     </div>
 </div>
