--- a/HrPortalV2.Web/Views/Resumes/Details.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Details.cshtml
@@ -14,7 +14,14 @@
                         <div class="col-md-3">
                             <ul class="list-unstyled profile-nav">
                                 <li>
-                                    <img src="~/Uploads/Resumes/@Model.Photo" class="img-responsive pic-bordered" alt="" />
+                                    @if (!string.IsNullOrEmpty(Model.Photo))
+                                    {
+                                        <img width="460" height="460" src="~/Uploads/Resumes/@Model.Photo" class="img-responsive pic-bordered" alt="" />
+                                    }
+                                    else
+                                    {
+                                        <img width="460" height="460" src="~/assets/layouts/layout3/img/avatar9.jpg" class="img-responsive pic-bordered" alt=""/> <br />
+                                    }
                                 </li>
                             </ul>
                         </div>
