--- a/HrPortalV2.Web/Views/Resumes/Index.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Index.cshtml
@@ -60,7 +60,7 @@
                 }
                 else
                 {
-                    <img width="50" src="../assets/layouts/layout3/img/avatar9.jpg" />
+                    <img src="~/images/profil_foto.png" width="50" />
                 }
             </td>
             <td>
