--- a/HrPortalV2.Web/Views/Resumes/MyResumes.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/MyResumes.cshtml
@@ -64,7 +64,7 @@
                 }
                 else
                 {
-                    <img style="width:50px;" src="../assets/layouts/layout3/img/avatar9.jpg" />
+                    <img src="~/images/profil_foto.png" width="50" />
                 }
             </td>
             <td>
