--- a/HrPortalV2.Web/Areas/Admin/Views/Resumes/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Resumes/Index.cshtml
@@ -9,7 +9,7 @@
 
 
 <p>
-	<a asp-action="Create" >Yeni Özgeçmiş </a>
+	<a asp-action="Create" class="btn btn-sm btn-primary">Yeni Özgeçmiş </a>
 </p>
 <table id="tblRecords" class="table">
     <thead>
@@ -225,19 +225,19 @@
                 @Html.DisplayFor(modelItem => item.IsActive)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Occupation.Id)
+                @Html.DisplayFor(modelItem => item.Occupation.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Objective)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Country.Id)
+                @Html.DisplayFor(modelItem => item.Country.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.City.Id)
+                @Html.DisplayFor(modelItem => item.City.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.County.Id)
+                @Html.DisplayFor(modelItem => item.County.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Projects)
@@ -297,7 +297,7 @@
                 @Html.DisplayFor(modelItem => item.IPAddress)
             </td>
             <td class="text-nowrap">
-                <a asp-action="Edit" asp-route-id="@item.Id" >Düzenle</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Düzenle</a>
                 <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-default">Detaylar</a>
                 <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Sil</a>
             </td>
