--- a/HrPortalV2.Web/Views/Resumes/Details.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Details.cshtml
@@ -20,7 +20,7 @@
                                     }
                                     else
                                     {
-                                        <img width="460" height="460" src="~/assets/layouts/layout3/img/avatar9.jpg" class="img-responsive pic-bordered" alt=""/> <br />
+                                        <img width="460" height="460" src="~/images/profil_foto.png" class="img-responsive pic-bordered" alt=""/> <br />
                                     }
                                 </li>
                             </ul>
