--- a/HrPortalV2.Web/Views/Resumes/Edit.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Edit.cshtml
@@ -59,7 +59,7 @@
                     }
                     else
                     {   
-                        <img width="460" height="460" src="~/assets/layouts/layout3/img/avatar9.jpg" class="img-responsive pic-bordered" alt=""/> <br />
+                        <img width="460" height="460" src="~/images/profil_foto.png" class="img-responsive pic-bordered" alt=""/> <br />
                     }
                     <br />
                     <input name="upload" type="file" class="form-control" />
