--- a/HrPortalV2.Web/Areas/Admin/Views/Shared/_AdminLoginPartial.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Shared/_AdminLoginPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<HrPortalV2.Models.ApplicationUser> SignInManager
+@inject UserManager<HrPortalV2.Models.ApplicationUser> UserManager
 
 @if (SignInManager.IsSignedIn(User))
 {
