--- a/HrPortalV2.Web/Areas/Admin/Views/Users/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Users/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityUser>
+﻿@model IEnumerable<HrPortalV2.Models.ApplicationUser>
 @{
     ViewData["Title"] = "Index";
 }
