--- a/HrPortalV2.Web/Areas/Admin/Views/Users/Edit.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Users/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Microsoft.AspNetCore.Identity.IdentityUser
+﻿@model HrPortalV2.Models.ApplicationUser
 @{
     ViewData["Title"] = "Kullanıcı Düzenle";
 }
