--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -11,6 +11,11 @@
         <form id="profile-form" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Input.FullName"></label>
+                <input asp-for="Input.FullName" class="form-control" />
+                <span asp-validation-for="Input.FullName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Username"></label>
                 <input asp-for="Username" class="form-control" disabled />
             </div>
@@ -34,11 +39,16 @@
                 <label asp-for="Input.PhoneNumber"></label>
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-            </div>         
+            </div>
             <div class="form-group">
+                @if (!string.IsNullOrEmpty(Model.Input.Photo))
+                {
+                    <img src="~/Uploads/profiles/@Model.Input.Photo" width="100" /><br />
+
+                }
                 <label asp-for="Input.Photo" class="control-label"></label>
                 <input asp-for="Input.Photo" type="hidden" />
-                <input type="file" name="upload" class="form-control" />
+                <input type="file" name="Input.Upload" class="form-control" />
                 <span asp-validation-for="Input.Photo" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-primary">Kaydet</button>
