--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,4 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@inject SignInManager<HrPortalV2.Models.ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
